syntax = "proto3";

package inventoryProto;
option go_package = "./inventoryProto";

message SearchReq {
    string search = 1;
}

message InventoryResponse {
    string ID = 1;
    string Name = 2;
}


service InventoryGrpcService {
    rpc Search(SearchReq) returns (InventoryResponse);
}